tests/cases/compiler-development/artifact/errors/diagnostic-wrong-function-arity.diagnostic
diagnostic error code=T0001 family=type message="wrong argument count for 'add'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-wrong-function-arity.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-wrong-function-arity.ari" bytes=103
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-wrong-function-arity.ari" line=6 column=10 end_line=6 end_column=13 byte_start=93 byte_end=96 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-wrong-function-arity.ari:6:10\n   |\n 6 |   return add(1);\n   |          ^^^"
